--- a/index.html
+++ b/index.html
@@ -77,33 +77,35 @@
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-laptop"></i>
                     <p class="experiencia-titulo">Desarrollo Web</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget condimentum nibh, at gravida velit. Nam tempus sed velit eget aliquet.</p>
+                    <p>Creación de sitios y aplicaciones web modernas, funcionales y adaptables a cualquier dispositivo. Utilizo tecnologías de última generación para ofrecer soluciones rápidas, escalables y centradas en la experiencia del usuario.</p>
                     <div class="badges-contenedor">
                         <span class="badge text-bg-primary">HTML</span>
                         <span class="badge text-bg-primary">CSS</span>
                         <span class="badge text-bg-primary">JavaScript</span>
+                        <span class="badge text-bg-primary">TypeScript</span>
+                        <span class="badge text-bg-primary">Bootstrap</span>
                         <span class="badge text-bg-primary">React</span>
                         <span class="badge text-bg-primary">Node Js</span>
                         <span class="badge text-bg-primary">Java</span>
                         <span class="badge text-bg-primary">MySql</span>
-                        <span class="badge text-bg-primary">TypeScript</span>
                     </div>
                 </div>
                 <!-- Desarrollo Movil -->
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-phone"></i>
                     <p class="experiencia-titulo">Desarrollo Movil</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget condimentum nibh, at gravida velit. Nam tempus sed velit eget aliquet.</p>
+                    <p>Diseño y desarrollo de aplicaciones móviles multiplataforma con interfaces intuitivas y alto rendimiento. Utilizo herramientas modernas como Flutter y Firestore para construir apps eficientes, seguras y fáciles de mantener.</p>
                     <div class="badges-contenedor">
-                        <span class="badge text-bg-primary">FLUTTER</span>
-                        <span class="badge text-bg-primary">DART</span>
+                        <span class="badge text-bg-primary">Flutter</span>
+                        <span class="badge text-bg-primary">Dart</span>
+                        <span class="badge text-bg-primary">Firestore</span>
                     </div>
                 </div>
                 <!-- Estudiante -->
                 <div class="columna col-12 col-md-4">
                     <i class="bi bi-book"></i>
                     <p class="experiencia-titulo">Estudiante</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget condimentum nibh, at gravida velit. Nam tempus sed velit eget aliquet.</p>
+                    <p>Formación académica profecional enfocada en el desarrollo de software y tecnologías emergentes. Me he capacitado en instituciones reconocidas, fortaleciendo mis habilidades tanto en entornos académicos como en programas intensivos de formación práctica.</p>
                     <div class="badges-contenedor">
                         <span class="badge text-bg-primary">IBEROAMERICANA</span>
                         <span class="badge text-bg-primary">GENERATIONS</span>
@@ -126,15 +128,18 @@
                 <!-- Proyecto 1 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/proyecto1.png" alt="Proyecto 1 ">
+                        <img src="images/proyecto1.png" alt="Proyecto 1 " class="proyecto-imagen">
                         <div class="overlay">
-                            <p>Proyecto 1</p>
+                            <p>Cinemapedia</p>
                             <div class="iconos-contenedor">
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/fermumu/cinemapedia_app2" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-laptop"></i>
+                                <a  href="#" 
+                                    class="play-video"
+                                    data-video="videos/cinemapedia_demo.mp4"
+                                    data-img="images/proyecto1.png">
+                                    <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
                         </div>
@@ -143,15 +148,19 @@
                 <!-- Proyecto 2 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/proyecto2.png" alt="Proyecto 2 ">
+                        <img src="images/proyecto2.png" alt="Proyecto 2 " class="proyecto-imagen">
                         <div class="overlay">
-                            <p>Proyecto 2</p>
+                            <p>Stret pet sentinel</p>
                             <div class="iconos-contenedor">
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/fermumu/street_pet_sentinel" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-laptop"></i>
+                                <a  href="#"
+                                    class="play-video"
+                                    data-video="videos/stretPetSentinel_demo.mp4"
+                                    data-img="images/proyecto2.png"
+                                >
+                                    <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
                         </div>
@@ -160,15 +169,19 @@
                 <!-- Proyecto 3 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/proyecto3.png" alt="Proyecto 3 ">
+                        <img src="images/proyecto3.png" alt="Proyecto 3 " class="proyecto-imagen">
                         <div class="overlay">
-                            <p>Proyecto 3</p>
+                            <p>TaskAdmin</p>
                             <div class="iconos-contenedor">
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/fermumu/taskadmin1" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-laptop"></i>
+                                <a  href="#"
+                                    class="play-video"
+                                    data-video="videos/taskAdmin_demo.mp4"
+                                    data-img="images/proyecto3.png"
+                                    >
+                                    <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
                         </div>
@@ -185,7 +198,7 @@
                                     <i class="bi bi-github"></i>
                                 </a>
                                 <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
                         </div>
@@ -202,7 +215,7 @@
                                     <i class="bi bi-github"></i>
                                 </a>
                                 <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
                         </div>
@@ -219,7 +232,7 @@
                                     <i class="bi bi-github"></i>
                                 </a>
                                 <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                                    <i class="bi bi-laptop"></i>
+                                    <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
                         </div>
@@ -355,5 +368,6 @@
         <div class="derechos-de-autor">Creado por Fernando Muñoz (2025) &#169;</div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="/scripts/video-handler.js"></script>
 </body>
 </html>
