--- a/index.html
+++ b/index.html
@@ -190,14 +190,17 @@
                 <!-- Proyecto 4 -->
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="proyecto">
-                        <img src="images/proyecto4.png" alt="Proyecto 4 ">
+                        <img src="images/proyecto4.png" alt="Proyecto 4 " class="proyecto-imagen">
                         <div class="overlay">
-                            <p>Proyecto 4</p>
+                            <p>Portafiolo</p>
                             <div class="iconos-contenedor">
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/fermumu/portafolioFernandoDev" target="_blank" rel="noopener noreferrer">
                                     <i class="bi bi-github"></i>
                                 </a>
-                                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                                <a href="#"
+                                    class="play-video"
+                                    data-video="videos/portafolio_demo.mp4"
+                                    data-img="images/proyecto3.png">
                                     <i class="bi bi-play-btn"></i>
                                 </a>
                             </div>
@@ -240,35 +243,20 @@
                 </div>
             </div>
         </div>
-        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/fermumu" target="_blank" rel="noopener noreferrer">
             <button type="button" class="btn btn-info">
                 Ver mas Proyectos
                 <i class="bi bi-arrow-right-circle-fill"></i>
             </button>
         </a>
     </section>
-    <!-- Articulos -->
+    <!-- Cv -->
     <section class="articulos  justify-content-start">
-        <h2 class="seccion-titulo texto-negro">Articulos</h2>
-        <div class="card" >
-            <div class="card-header">
-            Más Recientes
-            </div>
-            <ul class="list-group list-group-flush">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                    <li class="list-group-item">Titulo del articulo</li>
-                </a>
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                    <li class="list-group-item">Titulo del articulo</li>
-                </a>
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                    <li class="list-group-item">Titulo del articulo</li>
-                </a>
-            </ul>
-        </div>
-        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+        <h2 class="seccion-titulo texto-negro">Curriculum Vitae</h2>
+        <img src="/images/CV-Generation-Hector Muñoz V-02.jpg " alt="Miniatura del CV" class="img-thumbnail mb-3" style="max-width: 400px;">
+        <a href="/documents/CV-Generation-Hector Muñoz V-02.pdf" target="_blank">
             <button type="button" class="btn btn-info">
-                Ver mas Articulos
+                Descargar Cv
                 <i class="bi bi-arrow-right-circle-fill"></i>
             </button>
         </a>
@@ -276,7 +264,7 @@
     <!-- Testimonios -->
     <section class="testimonios seccion-clara">
         <h2 class="seccion-titulo">Testimonios</h2>
-        <h3 class="seccion-descripcion">Estos son algunos testimonios de nuestros clientes</h3>
+        <h3 class="seccion-descripcion">Estos son algunos testimonios de clientes y Jefes</h3>
         <!-- Carrusel -->
         <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -287,31 +275,31 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/proyecto1.png" class="d-block w-100" alt="...">
+                <img src="images/testimonio1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                <h5 class="testimonio-titulo">First slide label</h5>
-                <p class="testimonio-texto">Some representative placeholder content for the first slide.</p>
+                <h5 class="testimonio-titulo">Delta FORCE</h5>
+                <p class="testimonio-texto">Desarrollé una aplicación móvil de comercio electrónico, permitiendo a los usuarios explorar productos, agregarlos al carrito y realizar compras de forma sencilla y rápida.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/proyecto2.png" class="d-block w-100" alt="...">
+                <img src="images/testimonio2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                <h5 class="testimonio-titulo">Second slide label</h5>
-                <p class="testimonio-texto">Some representative placeholder content for the second slide.</p>
+                <h5 class="testimonio-titulo">SAMESU</h5>
+                <p class="testimonio-texto">Mejoré la experiencia de usuario mediante ajustes en la interfaz (UI) y optimización del rendimiento del módulo de historia clínica, empleando React.js y buenas prácticas de desarrollo frontend.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/proyecto3.png" class="d-block w-100" alt="...">
+                <img src="images/testimonio3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                <h5 class="testimonio-titulo">Third slide label</h5>
-                <p class="testimonio-texto">Some representative placeholder content for the third slide.</p>
+                <h5 class="testimonio-titulo">Dejando Huellitas</h5>
+                <p class="testimonio-texto">Desarrollé una aplicación móvil para la gestión y saneamiento de animales domésticos en condición de calle, con funcionalidades de registro fotográfico y geolocalización para facilitar su ubicación y atención.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/proyecto3.png" class="d-block w-100" alt="...">
+                <img src="images/testimonio4.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                <h5 class="testimonio-titulo">Third slide label</h5>
-                <p class="testimonio-texto">Some representative placeholder content for the third slide.</p>
+                <h5 class="testimonio-titulo">Espacio reservado para ti</h5>
+                <p class="testimonio-texto">Dare lo mejor para tu proyecto.</p>
                 </div>
             </div>
             </div>
@@ -334,7 +322,7 @@
                         ¡Hablemos!
                     </div>
                     <div class="col-12 col-md-4 descripcion">
-                        Contactanos para elaborar tu proyecto de desarrollo web haremos que tu idea se vuelva realidad
+                        Contactame para elaborar tu proyecto de desarrollo web hare que tu idea se vuelva realidad
                     </div>
                     <div class="col-12 col-md-4">
                         <a href="mailto:fernando1986caballeria@gmail.com">
@@ -358,10 +346,10 @@
             <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-instagram"></i>
             </a>
-            <a href="https://www.facebook.com/pages/?category=your_pages&ref=bookmarks" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-facebook"></i>
+            <a href="https://www.linkedin.com/in/hector-fernando-munoz-web-movil-dev/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
             </a>
-            <a href="https://wa.me/c/573185936956" target="_blank" rel="noopener noreferrer">
+            <a href="https://wa.me/c/573172576290" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-whatsapp"></i>
             </a>
         </div>
